--- a/style.css
+++ b/style.css
@@ -128,8 +128,9 @@ p{
   padding: 5px;
 }
 a.btn {
-  padding: 0 10px;
-  font-size: 12px;
+  padding: 0;
+  font-size: 14px;
+  color: #5053ff;
 }
 .IG :hover {
   transform: scale(1.2);
