--- a/style.css
+++ b/style.css
@@ -149,3 +149,12 @@ a.btn {
   color: #5053ff;
   /* สีเมาส์ชี้ */
 }
+.text-ig {
+  color: #2c146a;
+  font-weight: 650;
+}
+
+.text-fb {
+  color: #2c146a;
+  font-weight: 650;
+}
